PJ-2007-02-01-0: Cleanup:   Test cleanup for the issue_2061 test

EB-2007-01-31-0: Cleanup:   Made modifications according to review for
                            test 2158 and 2145
                 Review:    JG

PJ-2007-01-31-0: Enhancem:  Test safe implementation of the issue_2061 test

PJ-2007-01-30-0: Enhancem:  Added tests for issue 2061 + some function overview in sge_procedures.tcl

EB-2007-01-30-0: Enhancem:  Added missing tests for issue 2158 and 2145

EB-2007-01-26-0: Enhancem:  Fixed bug which caused error in test for issue 1330.

AA-2007-01-23-0: Enhancem:  o -wd/-cwd tests for qsub/qalter/qrsh
                 Review:    RD

RH-2007-01-23-0: Enhancem:  o Performance test for dbwriter added
                            o arco install test splitted (arco_dbwriter_install and
                              arco_reporting_install)
                 Review:    CR

RD-2007-01-22-0: Bugfix:    fixed install_core system error
                 Review:    CR

DT-2007-01-19-0: Enhancem:  o Extended DRMAA tests for DRMAA Java binding 1.0

CR-2007-01-19-2: Bugfix:    o fixed some test problems in job_start test
                            o added more error information

CR-2007-01-19-1: Bugfix:    Enhanced fix CR-2007-01-19-0 (Issue 111) to detect the
                            automounter prefix before starting the test. Now the
                            test should support any automounter prefix
                 Review:    JG

RH-2007-01-19-0: Bugfix:    installation of arco checktree did not work in mysql < 5.02
                  
CR-2007-01-19-0: Bugfix:    path_alias test should support darwin automounter prefix
                 Issue:     111
                 Review:    JG

JG-2007-01-18-0: Bugfix:    Fixed system_tests/windows/gui with no windows host.
                            Increased timeout in drmaa test.

RH-2007-01-18-0: Enhancm:   o mysql support for arco checktree added