@@ -1,0 +1,109 @@
+#!/vol2/TCL_TK/glinux/bin/expect
+#___INFO__MARK_BEGIN__
+##########################################################################
+#
+#  The Contents of this file are made available subject to the terms of
+#  the Sun Industry Standards Source License Version 1.2
+#
+#  Sun Microsystems Inc., March, 2001
+#
+#
+#  Sun Industry Standards Source License Version 1.2
+#  =================================================
+#  The contents of this file are subject to the Sun Industry Standards
+#  Source License Version 1.2 (the "License"); You may not use this file
+#  except in compliance with the License. You may obtain a copy of the
+#  License at http://gridengine.sunsource.net/Gridengine_SISSL_license.html
+#
+#  Software provided under this License is provided on an "AS IS" basis,
+#  WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING,
+#  WITHOUT LIMITATION, WARRANTIES THAT THE SOFTWARE IS FREE OF DEFECTS,
+#  MERCHANTABLE, FIT FOR A PARTICULAR PURPOSE, OR NON-INFRINGING.
+#  See the License for the specific provisions governing your rights and
+#  obligations concerning the Software.
+#
+#  The Initial Developer of the Original Code is: Sun Microsystems, Inc.
+#
+#  Copyright: 2001 by Sun Microsystems, Inc.
+#
+#  All Rights Reserved.
+#
+##########################################################################
+#___INFO__MARK_END__
+
+# define global variable in this namespace
+global check_name 
+global check_category 
+global check_description 
+global check_needs
+global check_functions 
+global check_highest_level
+global check_init_level_procedure
+global check_root_access_needs
+global env
+
+#set check_root_access_needs "yes"
+
+# define a level initialization procedure:
+set check_init_level_procedure "issue_2183_init_level"
+
+# define test's name and run level descriptions
+set check_name            "issue_2183"
+set check_category        "COMPATIBILITY SYSTEM VERIFIED"
+set check_highest_level   0
+set check_description(0)  "meaningless error in clients when reporting_param flush_time is incorrectly set"
+
+
+# define test's dependencies
+set check_needs           "init_core_system" 
+
+# setup and cleanup functions
+set check_setup_function issue_2183_setup
+set check_cleanup_function issue_2183_cleanup
+
+# define test's procedure order
+set check_functions {}
+lappend check_functions "issue_2183_test"
+
+proc issue_2183_init_level {} {
+   global CHECK_ACT_LEVEL
+
+   switch -- $CHECK_ACT_LEVEL {
+      "0" {
+         return 0
+      }
+   }
+
+   return -1  ;# no other level
+}
+
+# -------- local test procedures: initialization------------------------------
+
+proc issue_2183_setup {} {
+   global ts_config CHECK_OUTPUT
+   global config_backup
+
+   get_config config_backup
+}
+
+proc issue_2183_cleanup {} {
+   global ts_config CHECK_OUTPUT
+   global config_backup
+
+   set_config config_backup
+}
+
+
+proc issue_2183_test {} {
+   global ts_config CHECK_OUTPUT
+
+   set new_conf(reporting_params) "flush_time=-1"
+   set_config new_conf
+
+   set output [start_sge_bin "qstat" ""]
+
+   if {[string trim $output] != ""} {
+      add_proc_error "issue_2183_test" -1 "qstat output should have been empty, but was\n$output"
+   }
+}
+
