@@ -1,3 +1,6 @@
+JG-2007-02-06-0: Enhancem:  New check for IZ 2183.
+                 Review:    RD
+
 PJ-2007-02-01-0: Cleanup:   Test cleanup for the issue_2061 test
 
 EB-2007-01-31-0: Cleanup:   Made modifications according to review for
